# sound-player

./: .env  .env.example  Cargo.toml  README.md  asound.conf  build.sh  deploy.sh  shell.nix  sound-player.service
src/: main.rs
