[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
log = "0.4.17"
parking_lot = "0.12.1"
tokio = { version = "1.23.0", features = ["rt", "macros", "rt-multi-thread", "time"] }
watchman_client = "0.8.0"
